--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -1,4 +1,46 @@
+@import "_variables.scss";
+
 body {
 	background-color: white;
 	font-family: Arial, Helvetica, sans-serif;
+}
+
+.recipes {
+	border: 1px solid black;
+	padding: 10px;
+	margin: 20px;
+	width: 280px;
+
+	.recipeHeader {
+		display: flex;
+		justify-content: space-between;
+
+		.recipeHeaderText {
+			display: flex;
+		}
+
+		.deleteRecipeButton {
+			border: none;
+			color: $primary-blue-gray;
+			background-color: white;
+		}
+
+		.recipeLinks {
+			font-size: 14px;
+			color: $primary-blue-gray;
+			font-style: italic;
+			padding-left: 5px;
+		}
+	}
+
+	.recipeTitles,
+	.ingredientsLabel,
+	.rating {
+		font-weight: bold;
+		font-size: 14px;
+		margin: 5px;
+	}
+
+	.ingredientItems {
+	}
 }
