added some styling to buttons and recipe cards

--- a/src/stylesheets/_variables.scss
+++ b/src/stylesheets/_variables.scss
@@ -3,3 +3,8 @@ $secondary-mint-blue: #88b2cc;
 $khaki: #e7d4c0;
 $bright-salmon: #e98973;
 $blue-btn: #4386fc;
+
+$primary-black: #22292f;
+$secondary-black: #606f7b;
+$tertiary-gray: #8795a1;
+$light-gray: #b8c2cc;
