--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -5,11 +5,34 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
+#addRecipeButton {
+	border: 1px solid $blue-btn;
+	background-color: $blue-btn;
+	color: white;
+	padding: 7px 20px;
+	border-radius: 5px;
+	font-weight: bold;
+}
+
+#addRecipeButton:hover {
+	cursor: pointer;
+	background-color: white;
+	color: $blue-btn;
+}
+
+.recipesContainer {
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+}
+
 .recipes {
 	border: 1px solid black;
 	padding: 10px;
 	margin: 20px;
 	width: 280px;
+	box-shadow: 3px 5px 5px $light-gray;
+	min-width: 280px;
 
 	.recipeHeader {
 		display: flex;
@@ -17,19 +40,33 @@ body {
 
 		.recipeHeaderText {
 			display: flex;
+			align-items: center;
+		}
+
+		.recipeTitles {
+			font-size: larger;
 		}
 
 		.deleteRecipeButton {
+			display: flex;
+			align-items: flex-start;
 			border: none;
 			color: $bright-salmon;
 			background-color: white;
 		}
+		.deleteRecipeButton:hover {
+			color: red;
+			cursor: pointer;
+		}
 
 		.recipeLinks {
-			font-size: 14px;
+			font-size: medium;
 			color: $primary-blue-gray;
 			font-style: italic;
 			padding-left: 5px;
+		}
+		.recipeLinks:hover {
+			color: $secondary-black;
 		}
 	}
 
@@ -37,22 +74,31 @@ body {
 	.ingredientsLabel,
 	.rating {
 		font-weight: bold;
-		font-size: 14px;
+		font-size: medium;
 		margin: 5px;
 	}
-
-	// .ingredientItems {
-	// }
 }
 
 .addRecipePopup {
-	background-color: $khaki;
 	padding: 10px;
 	display: grid;
 	grid-template-columns: 1fr 2fr;
 
 	button {
 		width: 100px;
+		margin: 10px;
+		background-color: $blue-btn;
+		color: white;
+		font-weight: bold;
+		border: 1px solid $blue-btn;
+		border-radius: 5px;
+		padding: 7px;
+	}
+
+	button:hover {
+		cursor: pointer;
+		background-color: white;
+		color: $blue-btn;
 	}
 }
 
@@ -63,6 +109,24 @@ body {
 	height: 100vh;
 	top: 0;
 	left: 0;
+
+	.inputTitle {
+		color: $blue-btn;
+	}
+
+	.inputLabels {
+		font-weight: bold;
+		margin-top: 10px;
+	}
+
+	.inputs {
+		margin-top: 5px;
+	}
+
+	#title,
+	#ingredients {
+		font-style: italic;
+	}
 }
 
 .box {
@@ -93,11 +157,6 @@ body {
 	text-align: center;
 	border: 1px solid #999;
 	font-size: 20px;
-}
-
-.recipesContainer {
-	display: flex;
-	flex-wrap: wrap;
 }
 
 .ratingLine {
