added ingredient list as bullet points

--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -77,6 +77,14 @@ body {
 		font-size: medium;
 		margin: 5px;
 	}
+
+	.ingredientLists {
+		margin: 0px;
+	}
+
+	.ingredients {
+		font-size: small;
+	}
 }
 
 .addRecipePopup {
