--- a/src/stylesheets/styles.scss
+++ b/src/stylesheets/styles.scss
@@ -43,7 +43,7 @@ body {
 .recipes {
 	border: 1px solid black;
 	padding: 10px;
-	margin: none;
+	margin: 0px 30px 30px 0px;
 	width: 280px;
 	box-shadow: 3px 5px 5px $light-gray;
 	min-width: 280px;
